[package]
name = "Home4Paws"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
eframe = "0.31"
serde = "1.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
