[package]
name = "Home4Paws"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31"
eframe = "0.31"
serde = "1.0"
dotenv = "0.15.0"
tokio = "1"
serde_json = "1.0.140"
[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
